--- a/app/src/main/res/layout/activity_saya.xml
+++ b/app/src/main/res/layout/activity_saya.xml
@@ -12,13 +12,24 @@
         android:layout_height="350dp"
         android:layout_gravity="top"
         android:src="@drawable/headersaya"/>
-    <ImageView
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_gravity="top|right"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="-330dp"
-        android:layout_marginRight="30dp"
-        android:src="@drawable/pen"/>
+        android:layout_gravity="top|right">
+        <ImageView
+            android:id="@+id/edit"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="30dp"
+            android:src="@drawable/pen"/>
+        <ImageView
+            android:id="@+id/save"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="30dp"
+            android:src="@drawable/save"/>
+    </LinearLayout>
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="200dp"
@@ -31,14 +42,15 @@
         android:textColor="@color/colorAccent"
         android:layout_gravity="center_horizontal"
         android:textSize="15dp"/>
-    <TextView
+    <EditText
         android:id="@+id/nama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nama"
+        android:hint="Nama"
+        android:layout_marginTop="-10dp"
         android:textColor="@color/white"
         android:layout_gravity="center"
-        android:textSize="35dp"/>
+        android:textSize="30dp"/>
 
     <ImageView
         android:id="@+id/unggah"
@@ -84,7 +96,7 @@
     <ImageView
         android:layout_width="500dp"
         android:layout_height="30dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="115dp"
         android:src="@drawable/garis"/>
     <LinearLayout
         android:layout_width="match_parent"
