--- a/app/src/main/res/layout/activity_listview_home.xml
+++ b/app/src/main/res/layout/activity_listview_home.xml
@@ -13,14 +13,14 @@
         android:layout_gravity="center_horizontal">
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="489dp"
+            android:layout_width="490dp"
             android:layout_height="340dp"
             android:scaleType="fitXY"
             android:src="@drawable/oreki" />
         <ImageView
             android:id="@+id/akun"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="20dp"
@@ -45,7 +45,7 @@
             android:layout_marginTop="5dp"
             android:textSize="13dp"
             android:text="Nama Akun"
-            android:textColor="@color/black"/>
+            android:textColor="@color/colorPrimaryDark"/>
         <TextView
             android:id="@+id/pengunjung"
             android:layout_width="100dp"
@@ -54,7 +54,7 @@
             android:layout_below="@+id/namaakun"
             android:textSize="13dp"
             android:text="Pengunjung"
-            android:textColor="@color/black"/>
+            android:textColor="@color/colorPrimaryDark"/>
         <TextView
             android:id="@+id/waktu"
             android:layout_width="100dp"
@@ -63,7 +63,7 @@
             android:layout_below="@+id/pengunjung"
             android:textSize="13dp"
             android:text="Waktu"
-            android:textColor="@color/black"/>
+            android:textColor="@color/colorPrimaryDark"/>
 
     </RelativeLayout>
 
