--- a/app/src/main/res/layout/activity_kategori.xml
+++ b/app/src/main/res/layout/activity_kategori.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
         <ImageView
+            android:id="@+id/video"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_weight="0.5"
@@ -51,25 +52,25 @@
         android:layout_marginTop="-10dp">
         <ImageView
             android:id="@+id/goOlahraga"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/panah"/>
         <ImageView
             android:id="@+id/goMotivasi"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/motivation"
             android:layout_marginLeft="15dp"/>
         <ImageView
             android:id="@+id/goWawasan"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/wawasan"
             android:layout_marginLeft="15dp"/>
         <ImageView
             android:id="@+id/goHiburan"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/hiburan"
             android:layout_marginLeft="15dp"/>
     </LinearLayout>
@@ -77,7 +78,7 @@
         android:id="@+id/listview"
         android:layout_width="400dp"
         android:layout_gravity="center_horizontal"
-        android:layout_height="550dp"
+        android:layout_height="520dp"
         android:layout_marginTop="10dp"></ListView>
     <ImageView
         android:layout_width="500dp"
