--- a/app/src/main/res/layout/activity_listview_detail.xml
+++ b/app/src/main/res/layout/activity_listview_detail.xml
@@ -13,27 +13,25 @@
         android:layout_gravity="center_horizontal">
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="490dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="150dp"
+            android:layout_height="110dp"
             android:scaleType="fitXY"
             android:src="@drawable/oreki" />
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photo_akun"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_below="@+id/thumbnail"
+            android:layout_toRightOf="@+id/thumbnail"
             android:src="@drawable/ic_launcher_background"/>
         <TextView
             android:id="@+id/judul"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_toRightOf="@+id/photo_akun"
-            android:layout_below="@+id/thumbnail"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:textSize="18dp"
             android:text="Judul"
             android:textColor="@color/black"/>
