--- a/app/src/main/res/layout/activity_listview_home.xml
+++ b/app/src/main/res/layout/activity_listview_home.xml
@@ -5,16 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListviewHome">
+    tools:context=".ListviewHome"
+    android:id="@+id/listhome">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
-        <ImageView
+        <com.yuyakaido.android.squareimageview.SquareImageView
             android:id="@+id/thumbnail"
-            android:layout_width="490dp"
-            android:layout_height="300dp"
+            android:layout_width="430dp"
+            android:layout_height="250dp"
             android:layout_marginTop="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/oreki" />
