--- a/app/src/main/res/layout/activity_unggah.xml
+++ b/app/src/main/res/layout/activity_unggah.xml
@@ -25,6 +25,12 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:src="@drawable/thumbnail"/>
+    <TextView
+        android:id="@+id/tvid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:hint="! Saran : Ukuran Gambar 512 x 288 Pixel"/>
     <ImageView
         android:id="@+id/c_thumbnail"
         android:layout_width="150dp"
@@ -106,4 +112,5 @@
         android:layout_height="50dp"
         android:layout_marginLeft="30dp"
         android:src="@drawable/btnupload"/>
+
 </LinearLayout>
