--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -43,13 +43,22 @@
         android:textSize="13dp"
         android:text="Nama Akun"
         android:textColor="@color/colorPrimaryDark"/>
+        <TextView
+            android:id="@+id/kategoriDetail"
+            android:layout_width="100dp"
+            android:layout_height="20dp"
+            android:layout_toRightOf="@+id/photo_akunDetail"
+            android:layout_below="@+id/namaakunDetail"
+            android:textSize="13dp"
+            android:text="Kategori"
+            android:textColor="@color/colorPrimaryDark"/>
     </RelativeLayout>
     <ListView
         android:id="@+id/listview"
         android:layout_width="420dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:layout_height="340dp"></ListView>
+        android:layout_height="310dp"></ListView>
     <ImageView
         android:layout_width="500dp"
         android:layout_height="30dp"
