--- a/app/src/main/res/layout/activity_listviewriwayat.xml
+++ b/app/src/main/res/layout/activity_listviewriwayat.xml
@@ -1,69 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/listVideoSaya"
-    android:layout_marginTop="5dp"
-    tools:context=".ListviewVideoSaya">
+    android:layout_marginTop="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
         <ImageView
-            android:id="@+id/thumbnails2"
+            android:id="@+id/thumbnailsRiwayat"
             android:layout_width="180dp"
             android:layout_height="100dp"
             android:scaleType="fitXY"
             android:src="@drawable/oreki" />
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/photo_akuns2"
+            android:id="@+id/photo_akunsRiwayat"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_toRightOf="@+id/thumbnails2"
+            android:layout_toRightOf="@+id/thumbnailsRiwayat"
             android:src="@drawable/ic_launcher_background"/>
         <TextView
-            android:id="@+id/juduls2"
+            android:id="@+id/judulsRiwayat"
             android:layout_width="150dp"
             android:layout_height="40dp"
-            android:layout_toRightOf="@+id/photo_akuns2"
+            android:layout_toRightOf="@+id/photo_akunsRiwayat"
             android:layout_marginTop="10dp"
             android:textSize="13dp"
             android:text="Judul"
             android:textColor="@color/black"/>
         <ImageView
-            android:id="@+id/deleteVIdeoSaya"
+            android:id="@+id/deleteRiwayat"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_toRightOf="@id/juduls2"
+            android:layout_toRightOf="@id/judulsRiwayat"
             android:layout_marginTop="80dp"
             android:src="@mipmap/trash"/>
         <TextView
-            android:id="@+id/namaakuns2"
+            android:id="@+id/namaakunsRiwayat"
             android:layout_width="100dp"
             android:layout_height="20dp"
-            android:layout_toRightOf="@+id/photo_akuns2"
-            android:layout_below="@+id/juduls2"
+            android:layout_toRightOf="@+id/photo_akunsRiwayat"
+            android:layout_below="@+id/judulsRiwayat"
             android:layout_marginTop="5dp"
             android:textSize="10dp"
             android:text="Nama Akun"
             android:textColor="@color/colorPrimaryDark"/>
         <TextView
-            android:id="@+id/kategori2"
+            android:id="@+id/kategoriRiwayat"
             android:layout_width="100dp"
             android:layout_height="20dp"
-            android:layout_toRightOf="@+id/photo_akuns2"
-            android:layout_below="@+id/namaakuns2"
+            android:layout_toRightOf="@+id/photo_akunsRiwayat"
+            android:layout_below="@+id/namaakunsRiwayat"
             android:layout_marginTop="-5dp"
             android:textSize="10dp"
             android:text="Nama Akun"
             android:textColor="@color/colorPrimaryDark"/>
 
     </RelativeLayout>
+
 </LinearLayout>
