--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,7 +13,8 @@
         <FrameLayout
             android:id="@+id/frames"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true">
     <VideoView
         android:id="@+id/getvideo"
         android:layout_width="500dp"
