--- a/app/src/main/res/layout/activity_unggah.xml
+++ b/app/src/main/res/layout/activity_unggah.xml
@@ -46,6 +46,7 @@
         android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
     <ImageView
         android:id="@+id/c_video"
         android:layout_width="150dp"
@@ -53,6 +54,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="24dp"
         android:src="@drawable/textvideo"/>
+    <!--<TextView-->
+        <!--android:id="@+id/namafile"-->
+        <!--android:hint="Lokasi Video"-->
+        <!--android:layout_marginLeft="30dp"-->
+        <!--android:textSize="15dp"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
     <ImageView
         android:layout_width="50dp"
         android:layout_height="30dp"
